<resources>
    <string name="app_name">Ehsan</string>
    <string name="search">جستجو</string>
    <string name="exit">خروج</string>
    <string name="top">پرفروش ها</string>
    <string name="fresh">تازه ها</string>
    <string name="name">نام</string>
    <string name="price">قیمت</string>
    <string name="address">آدرس</string>
    <string name="name_test">محمدحسین</string>
    <string name="address_test">ولنجک</string>
    <string name="price_test">1000</string>
    <string name="profile">پروفایل</string>
    <string name="nothing_found">متاسفانه چیزی یافت نشد</string>
</resources>
