<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_left"
        android:paddingTop="@dimen/padding_top"
        android:paddingEnd="@dimen/padding_right"
        android:paddingBottom="@dimen/padding_bottom"
        android:elevation="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profile"
            app:srcCompat="@drawable/profile1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingStart="@dimen/padding_left"
            android:paddingEnd="@dimen/padding_right">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padding_right"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/latest_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/farsi"
                    android:text="@string/price_test"
                    android:textAlignment="viewEnd" />

                <TextView
                    android:id="@+id/latest_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/farsi"
                    android:text="@string/name_test"
                    android:textAlignment="viewEnd" />

                <TextView
                    android:id="@+id/latest_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/farsi"
                    android:text="@string/address_test"
                    android:textAlignment="viewEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/farsi"
                    android:text="@string/price"
                    android:textAlignment="viewEnd" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/farsi"
                    android:text="@string/name"
                    android:textAlignment="viewEnd" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/farsi"
                    android:text="@string/address"
                    android:textAlignment="viewEnd" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>