<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_horizontal|center_vertical"
    android:background="@drawable/background_gradiant_color"
    tools:context="view.MainActivity">

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:background="@drawable/buttons_oval_theme"
        android:drawableEnd="@drawable/ic_iconfinder_search_298865"
        android:fontFamily="@font/farsi"
        android:gravity="center|center_horizontal|center_vertical"
        android:paddingStart="@dimen/padding_left"
        android:paddingTop="@dimen/padding_top"
        android:paddingEnd="@dimen/padding_right"
        android:paddingBottom="@dimen/padding_bottom"
        android:text="@string/search"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="gotoSearchActivity"/>

    <Button
        android:id="@+id/btn_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/buttons_oval_theme"
        android:drawableEnd="@drawable/ic_iconfinder_star_298872"
        android:fontFamily="@font/farsi"
        android:gravity="center|center_horizontal|center_vertical"
        android:paddingStart="@dimen/padding_left"
        android:paddingTop="@dimen/padding_top"
        android:paddingEnd="@dimen/padding_right"
        android:paddingBottom="@dimen/padding_bottom"
        android:text="@string/top"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_search"
        android:onClick="goToRanksActivty"/>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/buttons_oval_theme"
        android:drawableEnd="@drawable/ic_iconfinder_sign_out_298869"
        android:fontFamily="@font/farsi"
        android:gravity="center|center_horizontal|center_vertical"
        android:paddingStart="@dimen/padding_left"
        android:paddingTop="@dimen/padding_top"
        android:paddingEnd="@dimen/padding_right"
        android:paddingBottom="@dimen/padding_bottom"
        android:text="@string/exit"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_new"
        android:onClick="exit"/>

    <Button
        android:id="@+id/btn_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/buttons_oval_theme"
        android:drawableEnd="@drawable/ic_iconfinder_flame_298779"
        android:fontFamily="@font/farsi"
        android:gravity="center|center_horizontal|center_vertical"
        android:paddingStart="@dimen/padding_left"
        android:paddingTop="@dimen/padding_top"
        android:paddingEnd="@dimen/padding_right"
        android:paddingBottom="@dimen/padding_bottom"
        android:text="@string/fresh"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_top"
        android:onClick="goToLatestActivty"/>

</androidx.constraintlayout.widget.ConstraintLayout>